[gd_scene load_steps=12 format=3 uid="uid://c881udm4scyqu"]

[ext_resource type="Script" path="res://scripts/Portal.gd" id="1_seuod"]
[ext_resource type="Texture2D" uid="uid://cil8kfi47036m" path="res://assets/sprites/DeathAnimation.png" id="2_o3ghf"]
[ext_resource type="FontFile" uid="uid://ce33c3yvuo3tf" path="res://assets/fonts/Fonts/m3x6.ttf" id="3_t8gmh"]
[ext_resource type="Texture2D" uid="uid://cuvgtk1wf10ww" path="res://assets/sprites/ToolTipBackground.png" id="4_rw02b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_blto6"]
atlas = ExtResource("2_o3ghf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh0km"]
atlas = ExtResource("2_o3ghf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xj7p"]
atlas = ExtResource("2_o3ghf")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hfty"]
atlas = ExtResource("2_o3ghf")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0156"]
atlas = ExtResource("2_o3ghf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rhxqo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blto6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh0km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xj7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hfty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0156")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m6sb"]

[node name="Portal" type="Node2D"]
script = ExtResource("1_seuod")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rhxqo")
autoplay = "default"
frame_progress = 0.324168

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2m6sb")

[node name="EnterPortalButton" type="TextureButton" parent="."]
visible = false
offset_left = -56.0
offset_top = -110.0
offset_right = 50.0
offset_bottom = -56.0
texture_normal = ExtResource("4_rw02b")
texture_pressed = ExtResource("4_rw02b")
texture_hover = ExtResource("4_rw02b")
texture_disabled = ExtResource("4_rw02b")
texture_focused = ExtResource("4_rw02b")
ignore_texture_size = true
stretch_mode = 0

[node name="EnterPortalLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -47.0
offset_top = -93.0
offset_right = 17.0
offset_bottom = -80.0
scale = Vector2(1.5, 1.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_t8gmh")
bbcode_enabled = true
text = "[wave] ENTER PORTAL"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="EnterPortalButton" to="." method="_on_enter_portal_button_pressed"]
